@@ -7,6 +7,8 @@ rtcontrib - compute contribution coefficients in a RADIANCE scene
 [
 .B "\-n nprocs"
 ][
+.B \-r
+][
 .B "\-e expr"
 ][
 .B "\-f source"
@@ -59,7 +61,9 @@ specification.
 If a destination begins with an exclamation mark ('!'), then
 a pipe is opened to a command and data is sent to its standard input.
 Otherwise, the destination is treated as a file.
-(An existing file of the same name is clobbered.)\0
+An existing file of the same name is clobbered, unless the
+.I \-r
+option is specified, in which case data recovery is attempted.
 If an output specification contains a "%s" format, this will be
 replaced by the modifier name.
 The
